# codeGTransfer

./: .gitignore  .gitmodules  CHANGELOG  CMakeConfig.hpp.in  CMakeLists.txt  README.md
.github/workflows/: cmake_linux_clang_32bit.yml  cmake_linux_clang_64bit.yml  cmake_linux_gcc8_32bit.yml  cmake_linux_gcc8_64bit.yml  cmake_linux_gcc_64bit.yml  cmake_windows_MSVC_32bit.yml  cmake_windows_MSVC_64bit.yml  cmake_windows_i686-posix-dwarf.yml  cmake_windows_x86_64-posix-seh.yml
include/: C_checksum.hpp  C_string.hpp  main.hpp
src/: C_checksum.cpp  C_string.cpp  main.cpp
submodules/: CMakeLists_serial_nocatkin.txt
